@@ -1,3 +1,7 @@
+ * MDExternalAccountBinding can be configured with a file that contains the
+   'kid' and 'hmac' values in JSON format. Since httpd config files are often
+   readable to non-admins, this allows to keep those values in a more protected
+   file.
  * OpenSSL 3.0 compatibility: fixed generation of Elliptic Curve private
    keys to work with openssl 3.0.0.
  * Docker testing arrived. Run `make docker-test` in your mod_md directory
